--- a/Wheel/Base.lproj/Main.storyboard
+++ b/Wheel/Base.lproj/Main.storyboard
@@ -105,8 +105,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="t2j-i1-jHY" kind="unwind" identifier="RecipyToWheels" unwindAction="unwindToWheelsWithSegue:" id="cTB-Z4-Gw6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="60i-sn-fiS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="t2j-i1-jHY" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1316" y="694"/>
         </scene>
