--- a/Wheel/Base.lproj/Main.storyboard
+++ b/Wheel/Base.lproj/Main.storyboard
@@ -107,12 +107,35 @@
                     </view>
                     <connections>
                         <segue destination="t2j-i1-jHY" kind="unwind" identifier="RecipyToWheels" unwindAction="unwindToWheelsWithSegue:" id="cTB-Z4-Gw6"/>
+                        <segue destination="Ji8-3L-Gmx" kind="show" identifier="RecipyToSteps" id="bzS-Ls-CUF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="60i-sn-fiS" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="t2j-i1-jHY" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1316" y="694"/>
+        </scene>
+        <!--Steps-->
+        <scene sceneID="5jT-gR-kWY">
+            <objects>
+                <viewController id="Ji8-3L-Gmx" userLabel="Steps" customClass="StepsViewController" customModule="Wheel" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5OU-KQ-QQa"/>
+                        <viewControllerLayoutGuide type="bottom" id="yGh-4Z-OCo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4zv-TK-Onf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="jl1-El-seu" kind="unwind" identifier="StepsToRecipy" unwindAction="unwindToRecipyWithSegue:" id="lJU-zK-jo3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sW7-4D-KOV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="jl1-El-seu" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2425" y="693"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7PR-xV-cVs">
@@ -131,24 +154,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BFy-Ca-ZUh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-63" y="-385"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="0rN-So-PiY">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Qh5-Du-Nee" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2wc-Bf-giU">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="xjE-g0-XdL" kind="relationship" relationship="rootViewController" id="NZt-6y-8Cu"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="47K-5Y-w7l" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-979.20000000000005" y="660.2698650674663"/>
         </scene>
         <!--AfterLaunch-->
         <scene sceneID="AAF-7d-Yri">
@@ -246,6 +251,5 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="JsK-hI-aH2"/>
-        <segue reference="Xb9-Iq-PWI"/>
     </inferredMetricsTieBreakers>
 </document>
