--- a/Wheel/Base.lproj/Main.storyboard
+++ b/Wheel/Base.lproj/Main.storyboard
@@ -134,6 +134,7 @@
                     <connections>
                         <segue destination="jl1-El-seu" kind="unwind" identifier="StepsToRecipy" unwindAction="unwindToRecipyWithSegue:" id="lJU-zK-jo3"/>
                         <segue destination="jl1-El-seu" kind="unwind" identifier="StepsToRecipyWithSwipe" unwindAction="unwindToRecipyWithSegue:" id="4k2-GX-JhW"/>
+                        <segue destination="jl1-El-seu" kind="unwind" identifier="StepsToRecipyWithConfirm" unwindAction="unwindToRecipyWithSegue:" id="w8O-v8-DJ7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sW7-4D-KOV" userLabel="First Responder" sceneMemberID="firstResponder"/>
