--- a/Wheel/Base.lproj/Main.storyboard
+++ b/Wheel/Base.lproj/Main.storyboard
@@ -64,6 +64,7 @@
                         <segue destination="xjE-g0-XdL" kind="show" identifier="WheelsToFilter" id="Xb9-Iq-PWI"/>
                         <segue destination="zk1-cU-Buj" kind="show" identifier="WheelsToRecipy" id="tTt-hq-gRy"/>
                         <segue destination="yf6-AV-UG0" kind="show" identifier="WheelsToOverlay" id="Dpn-V9-dIP"/>
+                        <segue destination="X86-kb-C2n" kind="show" identifier="WheelsToSubwheel" id="s8X-8a-0AY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -92,6 +93,24 @@
                 <exit id="OvR-jY-lV1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1784" y="-107"/>
+        </scene>
+        <!--Subwheel View Controller-->
+        <scene sceneID="T7E-Pf-BwD">
+            <objects>
+                <viewController id="X86-kb-C2n" customClass="SubwheelViewController" customModule="Wheel" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KLJ-O5-S6O"/>
+                        <viewControllerLayoutGuide type="bottom" id="wop-Gb-Z01"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lwp-Wr-uBj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hvg-9C-Dkd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1783" y="-845"/>
         </scene>
         <!--Filter-->
         <scene sceneID="de4-Ub-Gip">
